changed clientId from Intune to Microsoft Graph changed dependency from AzureAD(Preview) to Microsoft Graph updated script to use MgGraph Request fixed issue with group assignment Addressed several conflicts in polices Renamed Defender Firewall as it duplicates with most settings in Endpoint Protection
Policy update:
- Home Group removed https://support.microsoft.com/en-us/windows/homegroup-removed-from-windows-10-version-1803-07ca5db1-7bca-4d11-68a3-a31ff4a09979
- Hide\Sleep removed from Custom since part of Device Restriction
- Sleep configured with Device Restricton Policy
- GuestLogin EnableInsecureGuestLogons removed from custom since in Endpoint-Protection

--- a/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Endpoint-Protection-UI_25-11-2020-17-42-12.json
+++ b/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Endpoint-Protection-UI_25-11-2020-17-42-12.json
@@ -872,7 +872,7 @@
                                   "globalPortRulesFromGroupPolicyNotMerged":  true,
                                   "connectionSecurityRulesFromGroupPolicyMerged":  false,
                                   "connectionSecurityRulesFromGroupPolicyNotMerged":  true,
-                                  "outboundConnectionsRequired":  false,
+                                  "outboundConnectionsRequired":  true,
                                   "outboundConnectionsBlocked":  true,
                                   "inboundConnectionsRequired":  false,
                                   "inboundConnectionsBlocked":  true,
@@ -981,7 +981,7 @@
                                            "@odata.type":  "#microsoft.graph.groupAssignmentTarget",
                                            "deviceAndAppManagementAssignmentFilterId":  null,
                                            "deviceAndAppManagementAssignmentFilterType":  "none",
-                                           "groupId":  "Privileged Workstations"
+                                           "groupId":  "PAW-Local-Test"
                                        }
                         }
                     ]
