--- a/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Identity-Protection-UI_25-11-2020-17-42-13.json
+++ b/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Identity-Protection-UI_25-11-2020-17-42-13.json
@@ -15,7 +15,7 @@
     "version":  2,
     "useSecurityKeyForSignin":  true,
     "enhancedAntiSpoofingForFacialFeaturesEnabled":  true,
-    "pinMinimumLength":  8,
+    "pinMinimumLength":  6,
     "pinMaximumLength":  100,
     "pinUppercaseCharactersUsage":  "blocked",
     "pinLowercaseCharactersUsage":  "blocked",
@@ -37,7 +37,7 @@
                                            "@odata.type":  "#microsoft.graph.groupAssignmentTarget",
                                            "deviceAndAppManagementAssignmentFilterId":  null,
                                            "deviceAndAppManagementAssignmentFilterType":  "none",
-                                           "groupId":  "Privileged Workstations"
+                                           "groupId":  "PAW-Local-Test"
                                        }
                         }
                     ]
