Revert my local group assignments to original ones in Repo

--- a/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Endpoint-Protection-UI_25-11-2020-17-42-12.json
+++ b/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Endpoint-Protection-UI_25-11-2020-17-42-12.json
@@ -981,7 +981,7 @@
                                            "@odata.type":  "#microsoft.graph.groupAssignmentTarget",
                                            "deviceAndAppManagementAssignmentFilterId":  null,
                                            "deviceAndAppManagementAssignmentFilterType":  "none",
-                                           "groupId":  "PAW-Local-Test"
+                                           "groupId":  "Privileged Workstations"
                                        }
                         }
                     ]
