--- a/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Custom-CSP_25-11-2020-17-42-11.json
+++ b/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Custom-CSP_25-11-2020-17-42-11.json
@@ -446,7 +446,7 @@
                                            "@odata.type":  "#microsoft.graph.groupAssignmentTarget",
                                            "deviceAndAppManagementAssignmentFilterId":  null,
                                            "deviceAndAppManagementAssignmentFilterType":  "none",
-                                           "groupId":  "PAW-Local-Test"
+                                           "groupId":  "Privileged Workstations"
                                        }
                         }
                     ]
