--- a/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Identity-Protection-UI_25-11-2020-17-42-13.json
+++ b/PAW/JSON/DeviceConfiguration/PAW-Win10-Config-Identity-Protection-UI_25-11-2020-17-42-13.json
@@ -37,7 +37,7 @@
                                            "@odata.type":  "#microsoft.graph.groupAssignmentTarget",
                                            "deviceAndAppManagementAssignmentFilterId":  null,
                                            "deviceAndAppManagementAssignmentFilterType":  "none",
-                                           "groupId":  "PAW-Local-Test"
+                                           "groupId":  "Privileged Workstations"
                                        }
                         }
                     ]
